--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,42 +1,95 @@
 trigger:
 - develop
 
-pool:
-  vmImage: ubuntu-latest
-
 variables:
+  azureServiceConnection: 'AlongX-Azure-Account-Development'
+  webAppName: 'gsm-webapp'
+  resourceGroupName: 'Development'
+  vmImageName: 'ubuntu-latest'
+  environmentName: 'gsm-webapp'
+  projectRoot: $(System.DefaultWorkingDirectory)
   pythonVersion: '3.12'
-  projectRoot: 'GSM_Webapp'
-  appName: 'gsm-webapp'
+  isDev: $[eq(variables['Build.SourceBranch'], 'refs/heads/develop')]
 
-steps:
-- task: UsePythonVersion@0
-  displayName: 'Use Python $(pythonVersion)'
-  inputs:
-    versionSpec: '$(pythonVersion)'
-- script: |
-         python -m venv antenv
-         source antenv/bin/activate
-         python -m pip install --upgrade pip
-         pip install setup
-         pip install -r ./requirements.txt
-  workingDirectory: $(projectRoot)
-  displayName: "Install requirements"
+stages:
+- stage: Build
+  displayName: Build Stage
+  jobs:
+  - job: BuildJob
+    pool:
+      vmImage: $(vmImageName)
+    steps:
+    - task: UsePythonVersion@0
+      inputs:
+        versionSpec: '$(pythonVersion)'
+      displayName: 'Use Python $(pythonVersion)'
 
-- task: ArchiveFiles@2
-  displayName: 'Zip Code'
-  inputs:
-     rootFolderOrFile: '$(Build.SourcesDirectory)/$(projectRoot)'
-     includeRootFolder: false
-     archiveType: 'zip'
-     archiveFile: '$(Build.ArtifactStagingDirectory)/$(appName)_$(Build.BuildId).zip'
-     replaceExistingArchive: true
-     verbose: true
+    - script: |
+        python -m venv antenv
+        source antenv/bin/activate
+        python -m pip install --upgrade pip
+        pip install setup
+        pip install -r requirements.txt
+      workingDirectory: $(projectRoot)
+      displayName: "Install requirements"
 
-- task: AzureWebApp@1
-  displayName: 'Deploy Azure Web App'
-  inputs:
-    azureSubscription: 'AlongX-Azure-Account-Development'
-    appType: 'webAppLinux'
-    appName: $(appName)
-    package: '$(Build.ArtifactStagingDirectory)/$(appName)_$(Build.BuildId).zip'
+    - task: ArchiveFiles@2
+      displayName: 'Archive files'
+      inputs:
+        rootFolderOrFile: '$(projectRoot)'
+        includeRootFolder: false
+        archiveType: zip
+        archiveFile: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
+        replaceExistingArchive: true
+
+    - upload: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
+      displayName: 'Upload package'
+      artifact: drop
+
+- stage: Deploy
+  displayName: 'Deploy to Develop Environment'
+  dependsOn: Build
+  condition: and(succeeded(), eq(variables.isDev, true))
+  jobs:
+  - deployment: DeploymentJob
+    pool:
+      vmImage: $(vmImageName)
+    environment: $(environmentName)
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+
+          - task: UsePythonVersion@0
+            inputs:
+              versionSpec: '$(pythonVersion)'
+            displayName: 'Use Python version'
+          
+          - task: AzureAppServiceSettings@1
+            inputs:
+              azureSubscription: '$(azureServiceConnection)'
+              appName: $(webAppName)
+              resourceGroupName: '$(resourceGroupName)'
+              appSettings: |
+                [
+                  {
+                    "name": "ENABLE_ORYX_BUILD",
+                    "value": 1
+                  },
+                  {
+                    "name": "SCM_DO_BUILD_DURING_DEPLOYMENT",
+                    "value": 1
+                  },
+                  {
+                    "name": "POST_BUILD_COMMAND",
+                    "value": "pip install -r ./requirements.txt"
+                  }
+                ]
+
+          - task: AzureWebApp@1
+            displayName: 'Deploy Azure Web App : $(webAppName)'
+            inputs:
+              azureSubscription: '$(azureServiceConnection)'
+              appType: 'webAppLinux'
+              appName: '$(webAppName)'
+              package: '$(Pipeline.Workspace)/drop/$(Build.BuildId).zip'
