--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,12 @@ stages:
         pip install -r requirements.txt
       workingDirectory: $(projectRoot)
       displayName: "Install requirements"
-
+    - script: |
+      echo "Running collectstatic command"
+      antenv/bin/python manage.py collectstatic --noinput
+    workingDirectory: $(projectRoot)
+    displayName: 'Run collectstatic command'
+    
     - task: ArchiveFiles@2
       displayName: 'Archive files'
       inputs:
@@ -93,3 +98,6 @@ stages:
               appType: 'webAppLinux'
               appName: '$(webAppName)'
               package: '$(Pipeline.Workspace)/drop/$(Build.BuildId).zip'
+
+
+
