Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,12 +25,10 @@ stages:
       displayName: 'Use Python $(pythonVersion)'
 
     - script: |
-        python -m venv antenv
-        source antenv/bin/activate
-        python -m pip install --upgrade pip
-        pip install setup
+        python -m venv venv
+        source venv/bin/activate
         pip install -r requirements.txt
-        python manage.py migrate
+        python manage.py collectstatic
       workingDirectory: $(projectRoot)
       displayName: "Install requirements"
 
