--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,12 +25,12 @@ stages:
       displayName: 'Use Python $(pythonVersion)'
 
     - script: |
-        python -m venv venv
-        source venv/bin/activate
+        python -m venv antenv
+        source antenv/bin/activate
         python -m pip install --upgrade pip
         pip install setup
         pip install -r requirements.txt
-        python manage.py collectstatic --noinput
+        python manage.py collectstatic
       workingDirectory: $(projectRoot)
       displayName: "Install requirements"
 
@@ -66,6 +66,27 @@ stages:
               versionSpec: '$(pythonVersion)'
             displayName: 'Use Python version'
           
+          - task: AzureAppServiceSettings@1
+            inputs:
+              azureSubscription: '$(azureServiceConnection)'
+              appName: $(webAppName)
+              resourceGroupName: '$(resourceGroupName)'
+              appSettings: |
+                [
+                  {
+                    "name": "ENABLE_ORYX_BUILD",
+                    "value": 1
+                  },
+                  {
+                    "name": "SCM_DO_BUILD_DURING_DEPLOYMENT",
+                    "value": 1
+                  },
+                  {
+                    "name": "POST_BUILD_COMMAND",
+                    "value": "pip install -r ./requirements.txt"
+                  }
+                ]
+
           - task: AzureWebApp@1
             displayName: 'Deploy Azure Web App : $(webAppName)'
             inputs:
