--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,16 +4,11 @@ trigger:
 variables:
   azureServiceConnection: 'AlongX-Azure-Account-Development'
   webAppName: 'gsm-webapp'
-  resourceGroupName: 'Development'
   vmImageName: 'ubuntu-latest'
   environmentName: 'gsm-webapp'
-  projectRoot: $(System.DefaultWorkingDirectory)
   pythonVersion: '3.12'
   isRelease: $[eq(variables['Build.SourceBranch'], 'refs/heads/master')]
 
-stages:
-- stage: Build
-  displayName: Build Stage
   jobs:
   - job: BuildJob
     pool:
@@ -25,63 +20,45 @@ stages:
       displayName: 'Use Python $(pythonVersion)'
 
     - script: |
-        python -m venv antenv
-        source antenv/bin/activate
-        python -m pip install --upgrade pip
-        pip install setup
-        pip install -r ./requirements.txt
-      workingDirectory: $(projectRoot)
-      displayName: "Install requirements"
+        python -m venv env
+        source env/bin/activate
+        pip install -r requirements.txt
+      displayName: 'Install Dependencies'
 
     - task: ArchiveFiles@2
-      displayName: 'Archive files'
       inputs:
-        rootFolderOrFile: '$(projectRoot)'
+        rootFolderOrFile: '$(Build.SourcesDirectory)'
         includeRootFolder: false
-        archiveType: zip
-        archiveFile: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
+        archiveType: 'zip'
+        archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
         replaceExistingArchive: true
+      displayName: 'Archive Files'
 
-    - upload: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
-      displayName: 'Upload package'
-      artifact: drop
+    - task: PublishPipelineArtifact@1
+      inputs:
+        targetPath: '$(Build.ArtifactStagingDirectory)'
+        artifact: 'drop'
+        publishLocation: 'pipeline'
+      displayName: 'Publish Pipeline Artifact'
 
-- stage: Deploy
-  displayName: 'Deploy to Develop Environment'
-  dependsOn: Build
-  condition: and(succeeded(), eq(variables.isRelease, true))
-  jobs:
-  - deployment: DeploymentJob
-    pool:
-      vmImage: $(vmImageName)
-    environment: $(environmentName)
+  - deployment: DeployToAzureAppService
+    displayName: 'Deploy to Azure App Service'
+    environment: $(environmentName)  # Replace with your environment name
     strategy:
       runOnce:
         deploy:
           steps:
-
-          - task: UsePythonVersion@0
+          - task: DownloadPipelineArtifact@2
             inputs:
-              versionSpec: '$(pythonVersion)'
-            displayName: 'Use Python version'
-          
-          - task: AzureAppServiceSettings@1
-            inputs:
-              azureSubscription: '$(azureServiceConnection)'
-              appName: $(webAppName)
-              resourceGroupName: '$(resourceGroupName)'
-              appSettings: |
-                [
-                  {
-                    "name": "SCM_DO_BUILD_DURING_DEPLOYMENT",
-                    "value": 1
-                  }
-                ]
+              buildType: 'current'
+              artifactName: 'drop'
+              downloadPath: '$(System.ArtifactsDirectory)'
+            displayName: 'Download Pipeline Artifact'
 
           - task: AzureWebApp@1
-            displayName: 'Deploy Azure Web App : $(webAppName)'
             inputs:
-              azureSubscription: '$(azureServiceConnection)'
+              azureSubscription: $(azureServiceConnection)
               appType: 'webAppLinux'
-              appName: '$(webAppName)'
-              package: '$(Pipeline.Workspace)/drop/$(Build.BuildId).zip'
+              appName: $(webAppName)
+              package: '$(System.ArtifactsDirectory)/**/*.zip'
+            displayName: 'Deploy to Azure App Service'
