--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,6 +30,7 @@ stages:
         python -m pip install --upgrade pip
         pip install setup
         pip install -r requirements.txt
+        pip install django==3.2
       workingDirectory: $(projectRoot)
       displayName: "Install requirements"
 
