--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,20 +19,20 @@ stages:
     pool:
       vmImage: $(vmImageName)
     steps:
-    - task: UsePythonVersion@0
-      inputs:
-        versionSpec: '$(pythonVersion)'
-      displayName: 'Use Python $(pythonVersion)'
+    # - task: UsePythonVersion@0
+    #   inputs:
+    #     versionSpec: '$(pythonVersion)'
+    #   displayName: 'Use Python $(pythonVersion)'
 
-    - script: |
-        python -m venv antenv
-        source antenv/bin/activate
-        python -m pip install --upgrade pip
-        pip install setup
-        pip install -r requirements.txt
-        pip install django==3.2
-      workingDirectory: $(projectRoot)
-      displayName: "Install requirements"
+    # - script: |
+    #     python -m venv antenv
+    #     source antenv/bin/activate
+    #     python -m pip install --upgrade pip
+    #     pip install setup
+    #     pip install -r requirements.txt
+    #     pip install django==3.2
+    #   workingDirectory: $(projectRoot)
+    #   displayName: "Install requirements"
 
     - task: ArchiveFiles@2
       displayName: 'Archive files'
