--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,10 +19,10 @@ stages:
     pool:
       vmImage: $(vmImageName)
     steps:
-    # - task: UsePythonVersion@0
-    #   inputs:
-    #     versionSpec: '$(pythonVersion)'
-    #   displayName: 'Use Python $(pythonVersion)'
+    - task: UsePythonVersion@0
+      inputs:
+        versionSpec: '$(pythonVersion)'
+      displayName: 'Use Python $(pythonVersion)'
 
     - script: |
         sudo apt install python3-venv
@@ -31,6 +31,7 @@ stages:
         python -m pip install --upgrade pip
         pip install setup
         pip install -r requirements.txt
+        python manage.py collectstatic --no-input
       workingDirectory: $(projectRoot)
       displayName: "Install requirements"
 
@@ -96,3 +97,15 @@ stages:
               appType: 'webAppLinux'
               appName: '$(webAppName)'
               package: '$(Pipeline.Workspace)/drop/$(Build.BuildId).zip'
+
+          - task: AzureCLI@2
+            displayName: 'Restart App Service'
+            inputs:
+              azureSubscription: '$(azureServiceConnection)'
+              scriptType: 'bash'
+              scriptLocation: 'inlineScript'
+              inlineScript: |
+                # Restart Azure App Service
+                resourceGroupName='Development'
+                webAppName='gsm-webapp'
+                az webapp restart --resource-group $resourceGroupName --name $webAppName
