--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Django==4.2.3
-azure_storage==0.37.0
-python-dotenv==1.0.0
+whitenoise == 5.3.0
 Requests==2.31.0
+psycopg2==2.9.7
+django-logging-json
