--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,6 +33,8 @@ stages:
         python -m pip install --upgrade pip
         pip install setup
         pip install -r requirements.txt
+        python manage.py makemigrations
+        python manage.py migrate
         python manage.py collectstatic --no-input
       workingDirectory: $(projectRoot)
       displayName: "Install requirements"
