--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,11 +2,11 @@ trigger:
 - develop
 
 variables:
-  azureServiceConnection: 'AlongX-Azure-Account-Development'
-  webAppName: 'gsm-webapp'
-  resourceGroupName: 'Development'
+  azureServiceConnection: 'gurukul-prod-si-azureconnection'
+  webAppName: 'gurukul-web-prod-si-as'
+  resourceGroupName: 'gurukul-prod-si-rg'
   vmImageName: 'ubuntu-latest'
-  environmentName: 'gsm-webapp'
+  environmentName: 'gurukul-prod-si-rg'
   projectRoot: $(System.DefaultWorkingDirectory)
   pythonVersion: '3.12'
   isRelease: $[eq(variables['Build.SourceBranch'], 'refs/heads/develop')]
